docker and some other files changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,12 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
     ports:
       - "8080:8080"
+  redis:
+    image: redis:7.1
+    container_name: redis_cache
+    restart: always
+    ports:
+      -"6379:6379"
 
 volumes:
   postgres_data:
